implemented simple profession creation. TODO: weapon and armor
