# src/main/kotlin/com/mypieceofcode/rpgapi/application/professions/dto/request/NewOptionalSkill.kt
@@ -1,0 +1,7 @@
+package com.mypieceofcode.rpgapi.application.professions.dto.request
+
+data class NewOptionalSkill(
+        val firstId: String,
+        val secondId: String
+) {
+}
