# src/main/kotlin/com/mypieceofcode/rpgapi/application/professions/dto/response/ProfessionTrait.kt
@@ -1,0 +1,7 @@
+package com.mypieceofcode.rpgapi.application.professions.dto.response
+
+data class ProfessionTrait(
+        val traitName: String,
+        val traitExtend: Int
+) {
+}
