# src/main/kotlin/com/mypieceofcode/rpgapi/domain/profession/ProfessionRepository.kt
@@ -1,8 +1,5 @@
 package com.mypieceofcode.rpgapi.domain.profession
 
 import com.mypieceofcode.rpgapi.domain.Repository
-import com.mypieceofcode.rpgapi.infrastructure.persistence.DbProfession
 
-interface ProfessionRepository : Repository<Profession>{
-
-}
+interface ProfessionRepository : Repository<Profession>
