# src/main/kotlin/com/mypieceofcode/rpgapi/domain/profession/factory/ProfessionFactory.kt
@@ -1,6 +1,0 @@
-package com.mypieceofcode.rpgapi.domain.profession.factory
-
-
-interface ProfessionFactory {
-
-}
